crates/plotnik-lib/tests/05-typegen/alternations/error_conflict_skips_nested_scope_capture.txt
Q = [
  (identifier) @x
  {(string) @x} @row
  (number)* @x
]
==== diagnostics ====
error: capture `@x` has incompatible types across branches
 --> query.ptk:2:16
  |
2 |   (identifier) @x
  |                ^^
3 |   {(string) @x} @row
4 |   (number)* @x
  |             -- and a different type here
  |
help: make every branch produce the same type, or label the branches for an enum
